--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
-    "mongoose": "^5.9.7"
+    "mongoose": "^5.9.7",
+    "nodemon": "^2.0.3"
   }
 }
